--- a/includes/install-sdk-2017-2015-2013.md
+++ b/includes/install-sdk-2017-2015-2013.md
@@ -4,21 +4,21 @@ ms.service: cloud-services
 ms.topic: include
 ms.date: 11/25/2018
 ms.author: jeconnoc
-ms.openlocfilehash: eda65a5825e8c528a727aa95ef347254d98d0803
-ms.sourcegitcommit: 3102f886aa962842303c8753fe8fa5324a52834a
+ms.openlocfilehash: 55a4cd8f284105bacc18ef1fe4dc08564ee1c74f
+ms.sourcegitcommit: 1fbc75b822d7fe8d766329f443506b830e101a5e
 ms.translationtype: MT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "60521094"
+ms.lasthandoff: 05/14/2019
+ms.locfileid: "65595163"
 ---
 ## <a name="setupdevenv"></a>De ontwikkelomgeving instellen
 De eerste stap is het instellen van uw ontwikkelomgeving met Visual Studio en de Azure SDK.
 
-* Visual Studio 2017 bevat de Azure SDK. Als u VS2017 gebruikt, is er geen speciale configuratie nodig voor de ontwikkelomgeving.
+* Visual Studio 2017 en hoger bevat de Azure SDK. Als u Visual Studio 2017 of later, geen aanvullende configuratie nodig is voor de ontwikkelomgeving.
 * Voor Visual Studio 2015 klikt u op de volgende koppeling om de [Azure SDK voor Visual Studio 2015](https://go.microsoft.com/fwlink/?linkid=518003) te installeren.
 * Voor Visual Studio 2013 klikt u op de volgende koppeling om de [Azure SDK voor Visual Studio 2013](https://go.microsoft.com/fwlink/?LinkID=324322) te installeren.
 
-* Als Visual Studio niet is geïnstalleerd, kunt u [Visual Studio 2017 hier installeren](https://www.visualstudio.com/) (inclusief de Azure SDK).
+* Als u geen Visual Studio is geïnstalleerd, installeert u [Visual Studio 2019](https://www.visualstudio.com/) met de Azure SDK.
 
 > [!NOTE]
 > Afhankelijk van het aantal SDK-afhankelijkheden dat al op uw computer aanwezig is, kan het installeren van de SDK lang duren, van enkele minuten tot een half uur of meer.
